--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 body {
     background-color: gray;
 }
+
+#book-card {
+    color: blue;
+    width: 300px;
+    height: 110px;
+    border: solid black 5px;
+    font-size: 22px;
+    margin: 5px
+}
